# energy-analysis

./: .gitignore  pyproject.toml
data/: .~lock.energybalance_240411.csv#  energybalance_240320.csv  energybalance_240321.csv  energybalance_240322.csv  energybalance_240323.csv  energybalance_240324.csv  energybalance_240325.csv  energybalance_240326.csv  energybalance_240327.csv  energybalance_240328.csv  energybalance_240329.csv  energybalance_240330.csv  energybalance_240331.csv  energybalance_240401.csv  energybalance_240402.csv  energybalance_240403.csv  energybalance_240404.csv  energybalance_240405.csv  energybalance_240406.csv  energybalance_240407.csv  energybalance_240408.csv  energybalance_240409.csv  energybalance_240410.csv  energybalance_240411.csv  energybalance_240412.csv  energybalance_240413.csv
notebooks/: notebook_01.ipynb  notebook_01.py
scripts/: script_01.py
src/energy_analysis/: __init__.py  energy_balance_pdf.py
