[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-analysis"
version = "0.1.0"
description = "analyzing energy balance data"
readme = "README.md"
requires-python = ">=3.14"

authors = [
  { name = "Tom Christiaens" }
]

license = { text = "MIT" }

keywords = []

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "pandas",
  "matplotlib",
  "jupyter",
]

[tool.setuptools]
package-dir = {"" = "src"}
